feat: refactor cart functionality and remove cart template; add latest products section to homepage